--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "source-map-loader": "^1.0.0"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.5",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.7",
@@ -34,6 +35,7 @@
     "babel-preset-react": "^6.24.1",
     "emotion": "^10.0.27",
     "html-webpack-plugin": "^4.3.0",
+    "jquery": "^3.5.1",
     "react-bootstrap": "^1.2.2",
     "react-feather": "^2.0.9",
     "typescript": "^3.9.5",
