--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/webfontloader": "^1.6.32",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-player": "^2.7.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "source-map-loader": "^1.0.0"
